# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

cc_binary(
    name = "mini_client",
    srcs = [
        "mini_client.cc",
	"mini_client.hpp",
    ],
    linkshared=True,
    linkstatic=True,
    deps = [
        "@com_github_googleapis_google_cloud_cpp//:experimental-storage-grpc",
    ],
)

cc_binary(
   name = "mini_client_test",
   srcs = [ "mini_client_test.cc", "mini_client.cc", "mini_client.hpp" ],
   deps = [
        "@com_github_googleapis_google_cloud_cpp//:experimental-storage-grpc",
   ],
)
